--- a/bai tap/bai 11 - AJAX/blog.html
+++ b/bai tap/bai 11 - AJAX/blog.html
@@ -34,6 +34,7 @@
             display();
         })
         $("#btn-search").click(function (){
+            page = 0;
             keyword = $("#keyword").val();
             display();
         })
